# interview_solutions

101ways/: .python-version  main.py
accelerate_runner/: .python-version  requirements.txt
buildots/: .python-version  README.md  image_downloader.py  my.json  pairing.py  pipeline.py  projector.py  pyproject.toml
deutsche_bank/: settings.gradle
galaxy/: settings.gradle
hay/: build.gradle  settings.gradle
legalzoom/: README.md  pom.xml
novus/: Dockerfile  README.md  docker-compose.yaml  docker_entrypoint.sh  pyproject.toml
novus/backoffice/: models.py  urls.py  views.py
novus/backoffice/migrations/: 0001_initial.py  0002_fake_data.py
novus/novus/: settings.py  urls.py
novus/templates/: base.html
novus/templates/backoffice/: transaction_detail.html  transaction_list.html
novus/templates/registration/: logged_out.html
policy_expert1/: README.md  pom.xml
pollen/: README.md  requirements.txt
pollen/recommendations/: db.sqlite3  example_data.json
pollen/recommendations/recommendations/: settings.py  urls.py
pollen/recommendations/rewards/: apps.py  models.py  serializers.py  ticketing_api_client.py  urls.py  views.py
pollen/recommendations/tests/: test_refresh_recommendations.py
pollen/ticketing/: db.sqlite3  example_data.json
pollen/ticketing/tests/: test_views.py
pollen/ticketing/ticketing/: settings.py  urls.py
pollen/ticketing/ticketing_api/: apps.py  models.py  (+3 more)
sedex/: README.md  settings.gradle
sedex2/: build.gradle
zilch/: payment_container.puml  system_context_v1.puml  system_context_v2.puml  system_landscape.puml
(+67 files in other folders)
