[tool.poetry]
name = "buildots"
version = "1.0.0"
description = "Buildots Pipeline Exercise"
authors = ["Bulat Nigmatullin <bulatnig@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.0.1"
aiohttp = "^3.7.4"
aiofiles = "^0.7.0"
numpy = "^1.21.2"
imageio = "^2.9.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
